objects/VPPSR_Individual__c.object
<CustomObject>
    <fields>
        <fullName>VPPSR_Grantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPPSR Grantor</label>
        <referenceTo>VPPSR_Grantor__c</referenceTo>
        <relationshipLabel>VPPSR Individuals</relationshipLabel>
        <relationshipName>VedaIndividuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPPSR_Secured_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPPSR Secured Party</label>
        <referenceTo>VPPSR_Secured_Party__c</referenceTo>
        <relationshipLabel>VPPSR Individuals</relationshipLabel>
        <relationshipName>VedaIndividuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>family_Name__c</fullName>
        <label>family Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>given_Name__c</fullName>
        <label>given Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Individual</label>
    <nameField>
        <displayFormat>VPIND-{0000000}</displayFormat>
        <label>VedaIndividual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>